@startuml
' Pakiety
package KlientPackage {
    class KlientGUIMulti {
        - Funkcje manager
        - JTextArea chatArea
        - JTextField inputField
        - String username
        - static int aktywniKlienci
        - DefaultListModel<String> userListModel
        - JList<String> userList
        - TitledBorder userListBorder
        + KlientGUIMulti(String username)
        - createUI()
        - setDarkMode(JFrame frame)
        - setLightMode(JFrame frame)
        - connectToServer()
        + sendmessage(String message)
        + main(String[] args)
    }

    class Klient {
        - String clientId
        + Klient(String clientId)
        + sendmessage(String message)
        + start()
        + main(String[] args)
    }

    interface MessageObserver

    KlientGUIMulti ..|> MessageObserver
    Klient ..|> MessageObserver
}

package ServerPackage {
    interface Funkcje {
        + recieveMessage(String message, String id, String time)
        + addObserver(MessageObserver observer, String id)
        + removeObserver(String id)
        + getActiveUsers()
    }

    class FunkcjeImp {
        - Map<String, MessageObserver> activeClients
        - List<String> messageHistory
        + recieveMessage(String message, String id, String time)
        + addObserver(MessageObserver observer, String id)
        + removeObserver(String id)
        + getActiveUsers()
        - notifyObservers(String msg)
        - broadcastActiveUsers()
    }

    interface MessageObserver {
        + sendmessage(String message)
    }

    class Server {
        + main(String[] args)
    }

    class ServerGUI {
        - JTextArea logArea
        + ServerGUI()
        - startServer()
        + main(String[] args)
    }

    class LogWriter {
        - String LOG_FILE
        + logMessage(String userId, String msg, String time)
    }

    FunkcjeImp ..|> Funkcje
    FunkcjeImp --> MessageObserver : activeClients
    FunkcjeImp --> LogWriter : use
}

KlientGUIMulti --> Funkcje : manager
Klient --> Funkcje : manager
Server --> FunkcjeImp : creates an instance
ServerGUI --> FunkcjeImp : creates an instance

@enduml
